attached_assets/Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1743779028604.txt
-- Configuring done (0.0s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/workspace/ai_language/build
[  6%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreters/BaseI/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp: In member function ‘void ai_language::BaseInterpreter::interpretLine(const std::string&)’:
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:153:14: error: ‘isExitCommand’ was not declared in this scope
  153 |     else if (isExitCommand(command)) {
      |              ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp: In member function ‘virtual void ai_language::BaseInterpreter::handleCreateCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:173:75: warning: unused parameter ‘args’ [-Wunused-parameter]
  173 | nterpreter::handleCreateCommand(const std::vector<std::string>& args) {
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~

/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp: In member function ‘virtual void ai_language::BaseInterpreter::handleLoadCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:177:73: warning: unused parameter ‘args’ [-Wunused-parameter]
  177 | eInterpreter::handleLoadCommand(const std::vector<std::string>& args) {
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~

/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp: In member function ‘virtual void ai_language::BaseInterpreter::handleTrainCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:259:74: warning: unused parameter ‘args’ [-Wunused-parameter]
  259 | Interpreter::handleTrainCommand(const std::vector<std::string>& args) {
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~

/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp: In member function ‘virtual void ai_language::BaseInterpreter::handleEvaluateCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:263:77: warning: unused parameter ‘args’ [-Wunused-parameter]
  263 | erpreter::handleEvaluateCommand(const std::vector<std::string>& args) {
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~

/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp: In member function ‘virtual void ai_language::BaseInterpreter::handleShowCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:267:73: warning: unused parameter ‘args’ [-Wunused-parameter]
  267 | eInterpreter::handleShowCommand(const std::vector<std::string>& args) {
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~

/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp: In member function ‘virtual void ai_language::BaseInterpreter::handleSaveCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:271:73: warning: unused parameter ‘args’ [-Wunused-parameter]
  271 | eInterpreter::handleSaveCommand(const std::vector<std::string>& args) {
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~

/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp: In member function ‘virtual void ai_language::BaseInterpreter::handleAddCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:293:72: warning: unused parameter ‘args’ [-Wunused-parameter]
  293 | seInterpreter::handleAddCommand(const std::vector<std::string>& args) {
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~

/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp: In member function ‘virtual void ai_language::BaseInterpreter::predict(const std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:372:73: warning: unused parameter ‘params’ [-Wunused-parameter]
  372 | nterpreter::predict(const std::map<std::string, std::string>& params) {
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~

/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp: In member function ‘virtual void ai_language::BaseInterpreter::showMetric(const std::string&)’:
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:376:53: warning: unused parameter ‘metric’ [-Wunused-parameter]
  376 | void BaseInterpreter::showMetric(const std::string& metric) {
      |                                  ~~~~~~~~~~~~~~~~~~~^~~~~~
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp: In member function ‘virtual void ai_language::BaseInterpreter::handleDeleteModelCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:380:80: warning: unused parameter ‘args’ [-Wunused-parameter]
  380 | reter::handleDeleteModelCommand(const std::vector<std::string>& args) {
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~

/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp: In member function ‘virtual void ai_language::BaseInterpreter::handleCrossValidateCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:422:82: warning: unused parameter ‘args’ [-Wunused-parameter]
  422 | ter::handleCrossValidateCommand(const std::vector<std::string>& args) {
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~

/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp: In member function ‘virtual void ai_language::BaseInterpreter::handleExportResultsCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:426:82: warning: unused parameter ‘args’ [-Wunused-parameter]
  426 | ter::handleExportResultsCommand(const std::vector<std::string>& args) {
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~

/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp: In member function ‘virtual void ai_language::BaseInterpreter::handleScheduleTrainingCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:430:85: warning: unused parameter ‘args’ [-Wunused-parameter]
  430 | ::handleScheduleTrainingCommand(const std::vector<std::string>& args) {
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~

/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp: At global scope:
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:551:6: error: no declaration matches ‘bool ai_language::BaseInterpreter::isExitCommand(const std::string&)’
  551 | bool BaseInterpreter::isExitCommand(const std::string& command) {
      |      ^~~~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:551:6: note: no functions named ‘bool ai_language::BaseInterpreter::isExitCommand(const std::string&)’
In file included from /home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:1:
/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/BaseInterpreter.h:27:7: note: ‘class ai_language::BaseInterpreter’ defined here
   27 | class BaseInterpreter {
      |       ^~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/ai_language_lib.dir/build.make:76: CMakeFiles/ai_language_lib.dir/src/interpreters/BaseInterpreter.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:88: CMakeFiles/ai_language_lib.dir/all] Error 2
make: *** [Makefile:91: all] Error 2